# Velocore

./: .gitignore  CMakeLists.txt  README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/market/: page.tsx
frontend/app/orderbook/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/statistics/: page.tsx
frontend/components/: app-layout.tsx  connection-status.tsx  count-up.tsx  hot-list.tsx  market-heatmap.tsx  market-overview.tsx  orderbook-mini.tsx  price-chart.tsx  recent-trades.tsx  sidebar.tsx  top-header.tsx  top-navigation.tsx
src/: Config.h  MarketDataFeed.cpp  MarketDataFeed.h  main.cpp
src/brokers/include/: PaperBroker.h
src/models/: CMakeLists.txt
src/models/impl/: Order.cpp  OrderBook.cpp  Trade.cpp  Types.cpp
src/models/include/: Order.h  OrderBook.h  Trade.h  Types.h
src/persistence/impl/: TradeLogger.cpp
src/persistence/include/: TradeLogger.h
test/: CMakeLists.txt  run_tests.sh  test_data_structures.cpp  test_market_data.cpp  test_websocket_parsing.cpp
